--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">Products</a></li>
-            <li><a href="#">Cart View</a></li>
+            <li><a href="#">Cart view</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
     </div>
